--- a/pdfs.html
+++ b/pdfs.html
@@ -56,7 +56,7 @@
                     <div class="icon-box">
                         <div class="icon"><i class="fas fa-layer-group"></i></div>
                         <div class="text"><a href="planificacion.html">
-                                <div class="title">Planificacion <i class="far fa-arrow-right"></i></div>
+                                <div class="title">Planificación <i class="far fa-arrow-right"></i></div>
                                 <div class="sub-text">Planificación de una interfaces web.</div>
                             </a>
                         </div>
